# goit-pythonweb-hw-12

./: .coverage  .gitignore  Dockerfile  docker-compose.yaml  example.env  main.py  pyproject.toml  readme.md  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/versions/: e73014d956a9_init.py
src/: utils.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload.py  users.py
src/templates/: reset_password_email.html  verification_email.html
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_contacts.py  test_api_users.py  test_api_utils.py
tests/unit/: test_repository_contacts.py  test_repository_users.py  test_services_contacts.py  test_services_email.py  test_services_upload.py  test_services_users.py
